[package]
name = "tendermint-reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.21", features = ["thread-pool"] }
serde = { version = "1.0.163", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

# Substrate
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

tokio = { version = "1.22.0", features = ["full"] }
time = "0.3"
rand = "0.8.5"
yaml-rust = "0.4.5"
tempfile = "3.5.0"
assert_matches = "1.5.0"
async-trait = "0.1.68"
async-std = "1.12.0"

[features]
default = []
trace = ["tracing"]

[[test]]
name = "consensus"
path = "tests/consensus.rs"
